lib/stratiform/res/test/stratiform/corpus/pos/custom-sigil-at-sign.tel
tel 1.0 https://example.com/s @

@ comment with at-sign sigil
hello
