lib/stratiform/res/test/stratiform/corpus/neg/e310-schema-bad-sigil-char.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e210-test
sigil A

document
  field foo string
